<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_todoist_voice"
        android:icon="@drawable/ic_mic_24"
        android:title="@string/todoist_voice"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_play_briefing"
        android:icon="@drawable/ic_play_arrow_24"
        android:title="@string/play_briefing"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title"
        app:showAsAction="always" />
</menu>
